--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link rel="stylesheet" href="{{ "/style.css" }}">
+    <link rel="stylesheet" href="{{ ""/assets/css/main.css" | prepend: https://webbmantra.github.io/Leonardo-Farinas-multimedia-designer/" }}">
 	
 	<!-- Custom favicon icon -->
 	<link rel="shortcut icon" type="image/png" href="/favicon.png">
